--- a/style.css
+++ b/style.css
@@ -25,6 +25,13 @@
 
 }
 
+@-webkit-keyframes rotate-logo {
+    100%{
+        rotate: 90deg;
+    }
+}
+
+
 @keyframes short-container {
     100%{
         height: 7vh;
@@ -44,6 +51,13 @@
     border: 1px solid blue;
     position: relative;
     top: 6px;
+}
+@-webkit-keyframes vertical-bar-anim{
+    100%{
+        margin-top: 351.8px;
+        rotate: 360deg;
+        transform: rotateY(180deg);  
+    }
 }
 
 @keyframes vertical-bar-anim {
