--- a/style.css
+++ b/style.css
@@ -56,6 +56,7 @@
         margin-top: 351.8px;
         transform:rotateY(360deg);
         rotate: 360deg;
+        -o-transform: rotate(360deg);
        
     }
 }
